Fix margin collapsing in examples

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -171,8 +171,10 @@ h2 {
     width: 100%;
     table-layout: fixed;
     counter-reset: item;
-    margin: 0;
     padding: 0;
+
+    // XXX compensate the lack of margin collapsing in tables
+    margin: -1em 0;
 
     li {
         display: table-row;
